[gd_scene load_steps=5 format=3 uid="uid://cq3c2xwfabdl"]

[ext_resource type="Texture2D" uid="uid://soh42xqu2eua" path="res://assets/items/fruit.png" id="1_dhrhs"]
[ext_resource type="Script" path="res://scripts/speedfroot.gd" id="1_yiqhp"]
[ext_resource type="AudioStream" uid="uid://c00xaie4tfdwl" path="res://assets/sounds/sfx_gem.ogg" id="3_twq8v"]

[sub_resource type="CircleShape2D" id="CircleShape2D_r175e"]
radius = 6.08276

[node name="SpeedFroot" type="Area2D"]
z_index = 5
collision_mask = 2
script = ExtResource("1_yiqhp")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_dhrhs")
region_enabled = true
region_rect = Rect2(0, 16, 16, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_r175e")

[node name="PopupLabel" type="Label" parent="."]
visible = false
modulate = Color(0.982757, 0.762481, 0, 1)
offset_right = 40.0
offset_bottom = 23.0
text = "+Speed"

[node name="PickupSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_twq8v")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
